# bazel_cc_meta

./: .bazelrc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MODULE.bazel  README.md  defs.bzl
cc_meta/: BUILD.bazel  cc_meta.bzl  check_direct_deps_exports.py  combine_direct_imports.py  combine_includes_lists.py  fix_deps.py  identify_direct_includes.py  refresh.py  run_suppress_stdout.sh
examples/: precommit_fix.sh
examples/always_link/: BUILD.bazel  lowest.h  main_wrapper.cc  middle.cc  middle.h  middle_printer.cc  middle_test.cc
examples/custom_deviations/: BUILD.bazel  defs.bzl  lowest.h  lowest_printer.cc  lowest_test.cc  middle.cc  middle.h
examples/default_good/: BUILD.bazel  lowest.h  middle.cc  middle.h  middle_impl.h  middle_printer.cc  middle_test.cc
examples/default_transitive/: BUILD.bazel  lowest.h  lowest_printer.cc  lowest_test.cc  middle.cc  middle.h
examples/default_with_opts/: BUILD.bazel  lowest.h  middle.cc  middle.h  middle_impl.h  middle_printer.cc  middle_test.cc
examples/empty_start/: BUILD.bazel
examples/forward_exports/: BUILD.bazel  lowest.h  lowest_printer.cc  lowest_test.cc  middle.cc  middle.h
