module(
    name = "bazel_cc_meta",
    version = "0.0.0",
    bazel_compatibility = [">=7.4.0"],
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.8",
)
use_repo(python, "python_versions")

bazel_dep(name = "buildozer", version = "8.0.3")
