load("@bazel_cc_meta//cc_meta:cc_meta.bzl", "refresh_cc_meta")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# ============= Public tools =============

py_binary(
    name = "fix_deps",
    srcs = ["fix_deps.py"],
    args = [
        "--buildozer",
        "$(execpath @buildozer//:buildozer)",
    ],
    data = [
        "@buildozer",
    ],
    visibility = ["//visibility:public"],
)

# Default refresh all script.
# For custom deviations or skipped tags, see README.md or defs.bzl.
refresh_cc_meta(
    name = "refresh_all",
    visibility = ["//visibility:public"],
)

# ============= Private tools =============
# Note, targets must be public because they are used by user-side aspects.

py_binary(
    name = "combine_includes_lists",
    srcs = ["combine_includes_lists.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "check_direct_deps_exports",
    srcs = ["check_direct_deps_exports.py"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "run_suppress_stdout",
    srcs = ["run_suppress_stdout.sh"],
    visibility = ["//visibility:public"],
)
