load("@bazel_cc_meta//cc_meta:cc_meta.bzl", "refresh_cc_meta")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "lowest",
    hdrs = [
        "lowest.h",
    ],
)

cc_library(
    name = "middle",
    srcs = [
        "middle.cc",
    ],
    hdrs = [
        "middle.h",
    ],
    tags = [
        # ":middle" forwards exports from its direct dependencies (":lowest")
        "cc_meta_forward_exports",
    ],
    deps = [
        ":lowest",
    ],
)

cc_binary(
    name = "lowest_printer",
    srcs = [
        "lowest_printer.cc",
    ],
    deps = [
        # ":middle" forwards exports from ":lowest"
        ":middle",
    ],
)

cc_test(
    name = "lowest_test",
    srcs = [
        "lowest_test.cc",
    ],
    deps = [
        # ":middle" forwards exports from ":lowest"
        ":middle",
    ],
)

# bazel run //examples/forward_exports:refresh
# Expecting empty dependency_issues.json
# Expecting target_exports.json to have "examples/forward_exports/lowest.h" in exports of ":middle"
refresh_cc_meta(
    name = "refresh",
    targets = ["//examples/forward_exports:all"],
    visibility = ["//visibility:public"],
)
